INCLUDE/Vcl/EDITINTF.HPP

struct TEditPos
{
	short Col;
	int Line;
} ;
struct TCharPos
{
	short CharIndex;
	int Line;
} ;

class DELPHICLASS TIEditReader;



class DELPHICLASS TIEditWriter;



class DELPHICLASS TIEditView;
enum TSyntaxHighlighter { shNone, shPascal, shC, shSQL, shQuery };
enum TBlockType { btInclusive, btLine, btColumn, btNonInclusive, btUnknown };

class DELPHICLASS TIEditorInterface;
enum TPropertyType { ptUnknown, ptInteger, ptChar, ptEnumeration, ptFloat, ptString, ptSet, ptClass, 
	ptMethod, ptWChar, ptLString, ptLWString, ptVariant };

class DELPHICLASS TIComponentInterface;

typedef bool __stdcall (*TGetChildCallback)(void * Param, TIComponentInterface* ComponentInterface);